--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,19 +6,19 @@
 <!-- /.login-logo -->
 <div class="card">
     <div class="card-body login-card-body">
-        <p class="login-box-msg">Sign in to start your session</p>
+        <p class="login-box-msg">Reset Your password</p>
 
-        <form action="{% url 'login' %}" method="post">
+        <form method="post">
             {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}">
+            <input  type="hidden"  name="next"  value="{{ next }}">
             {{ form|crispy }}
             <div class="col-4">
-                <input value="Sign In" type="submit" class="btn btn-primary btn-block btn-flat">
+                <input value="Reset" type="submit" class="btn btn-primary btn-block btn-flat">
             </div>
         </form>
         <hr>
         <p class="mb-1">
-            <a href="{% url 'password_reset' %}">I forgot my password</a>
+            <a href="{% url 'login' %}">Login</a>
         </p>
         <p class="mb-0">
             <a href="{% url 'signup' %}" class="text-center">Register a new membership</a>
