--- a/templates/auth.html
+++ b/templates/auth.html
@@ -21,6 +21,13 @@
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
+<!--        {% if messages %}-->
+<!--        <ul class="messages">-->
+<!--            {% for message in messages %}-->
+<!--            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>-->
+<!--            {% endfor %}-->
+<!--        </ul>-->
+<!--        {% endif %}-->
         <div class="login-logo">
             <a href="/"><b>Django</b>LTE</a>
         </div>
