--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -9,6 +9,7 @@
 
         <form action="{% url 'signup' %}" method="post">
             {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
             {{ form|crispy }}
             <div class="col-4">
                 <input value="Sign Up" type="submit" class="btn btn-primary btn-block btn-flat">
