--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div  class="card">
     <div  class="card-body">
-        <h4  class="card-title">Reset your password</h4>
+        <h4  class="card-title">Change password</h4>
         <form  method="post">
             {% csrf_token %}
             <input  type="hidden"  name="next"  value="{{ next }}">
